--- a/_posts/2013-10-05-til3.md
+++ b/_posts/2013-10-05-til3.md
@@ -5,6 +5,6 @@ comments: false
 tags : [TILs] 
 ---
 
-The bakery down the street sells doughnut+coffe for $2! 
+The bakery down the street sells doughnut+coffee for $2! 
 Also, programming should be done by knowledge, not superstition. 
 If you don't understand the purpose of each line of code in a function, you don't understand that function.
